# generic-array-struct

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
attr/: Cargo.toml
attr/src/: builder.rs  destr.rs  errs.rs  idents.rs  lib.rs  trymap.rs  utils.rs  zip.rs
attr/tests/tests/: basic.rs
builder/: Cargo.toml  README.md
builder/src/: lib.rs
common/: Cargo.toml
common/src/: errs.rs  idents.rs  lib.rs  utils.rs
examples/cartesian/: Cargo.toml  README.md
examples/cartesian/src/: lib.rs
examples/rgb/: Cargo.toml  README.md
examples/rgb/src/: lib.rs
