[workspace]
resolver = "2"
members = [
    "attr",
    "common",
    "examples/*",
]


[workspace.package]
edition = "2021"
version = "0.3.1-bc"
license-file = "LICENSE"
description = "An attribute proc macro to convert structs with named fields of the same generic type into a single-array-field tuple struct with array-index-based accessor and mutator methods."
repository = "https://github.com/igneous-labs/generic-array-struct"
rust-version = "1.64"

[workspace.dependencies]
heck = { version = "^0.5", default-features = false }
proc-macro2 = { version = "^1", default-features = false }
quote = { version = "^1", default-features = false }
syn = { version = "^2", default-features = false }

# workspace members
generic-array-struct = { path = "./attr" }
generic-array-struct-common = { path = "./common" }
