[package]
name = "generic-array-struct"
version = { workspace = true }
edition = { workspace = true }
license-file = { workspace = true }
description = { workspace = true }
repository = { workspace = true }

[lib]
proc-macro = true

[dependencies]
heck = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["derive", "parsing", "printing", "proc-macro"] }
