[package]
name = "generic-array-struct"
version = { workspace = true }
edition = { workspace = true }
license-file = { workspace = true }
description = { workspace = true }
repository = { workspace = true }

[lib]
proc-macro = true

[dependencies]
generic-array-struct-common = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["printing", "parsing", "proc-macro"]}
