[package]
name = "generic-array-struct"
version = { workspace = true }
edition = { workspace = true }
license-file = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
proc-macro = true

[dependencies]
heck = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["derive", "printing", "parsing", "proc-macro"]}
