[package]
name = "generic-array-struct-builder"
edition.workspace = true
version.workspace = true
license-file.workspace = true
description.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
generic-array-struct-common = { workspace = true }
heck = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
generic-array-struct = { workspace = true }
